--- a/productos.html
+++ b/productos.html
@@ -19,7 +19,7 @@ layout: default
 		<img class="img_product" src="images/SAE.png">
 		<ul class="ul_product"> 
 		<br>
-			<p>Sistema Administrativo Empresarial </p>			
+			<p>Sistema Administrativo Empresarial</p>			
 		    <li>Administra todas las operaciones del ciclo de compra-venta de la empresa. </li>
 		  </ul>
 		<a class="button" href="#">CONOCE MÁS</a>
@@ -29,8 +29,8 @@ layout: default
 		<img class="img_product" src="images/COI.png">
 		<ul class="ul_product"> 
 		<br>
-			<p> </p>			
-		    <li>Administra todas las operaciones del ciclo de compra-venta de la empresa. </li>
+			<p> Sistema de Contabilidad integral</p>			
+		    <li> Procesa, integra y mantiene actualizada la información contable y fiscal de la empresa en froma segura y confiable.</li>
 		  </ul>
 		  </ul>
 		<a class="button" href="#">CONOCE MÁS</a>
@@ -40,8 +40,8 @@ layout: default
 		<img class="img_product" src="images/NOI.png">
 		<ul class="ul_product"> 
 		<br>
-			<p>Sistema Administrativo Empresarial </p>			
-		    <li>Administra todas las operaciones del ciclo de compra-venta de la empresa. </li>
+			<p>Sistema  de Nómina Integral  </p>			
+		    <li>Genera para tu empresa recibos de nómina electrónicos CFDI de acuerdo a las obligaciones fiscales.</li>
 		  </ul>
 		<a class="button" href="#">CONOCE MÁS</a>
 	</section>
@@ -53,8 +53,8 @@ layout: default
 		<img class="img_product" src="images/CAJA.png">
 		<ul class="ul_product"> 
 		<br>
-			<p>Sistema Administrativo Empresarial </p>			
-		    <li>Administra todas las operaciones del ciclo de compra-venta de la empresa. </li>
+			<p>Sistema de Punto de Venta y Administración de Comercios  </p>			
+		    <li>Convierte tu equipo de cómputo en un punto de venta, y además Factura Electrónicamente.</li>
 		  </ul>
 		<a class="button" href="#">CONOCE MÁS</a>
 	</section>
@@ -63,8 +63,8 @@ layout: default
 		<img class="img_product" src="images/BANCO.png">
 		<ul class="ul_product"> 
 		<br>
-			<p>Sistema Administrativo Empresarial </p>			
-		    <li>Administra todas las operaciones del ciclo de compra-venta de la empresa. </li>
+			<p> Sistema de Control Bancario</p>			
+		    <li> Controla eficientemente los ingresos, egresos y movimientos de cualquier cuenta bancaria.</li>
 		  </ul>
 		  </ul>
 		<a class="button" href="#">CONOCE MÁS</a>
@@ -74,8 +74,8 @@ layout: default
 		<img class="img_product" src="images/PROD.png">
 		<ul class="ul_product"> 
 		<br>
-			<p>Sistema Administrativo Empresarial </p>			
-		    <li>Administra todas las operaciones del ciclo de compra-venta de la empresa. </li>
+			<p>Sistema de Control de Producción </p>			
+		    <li> Permite la planeación y control de los procesos de fabricación de la empresa, mediante un eficiente seguimiento de la producción.</li>
 		  </ul>
 		<a class="button" href="#">CONOCE MÁS</a>
 	</section>
@@ -98,8 +98,8 @@ layout: default
 		<img class="img_product" src="images/CFDI.png">
 		<ul class="ul_product"> 
 		<br>
-			<p>Sistema Administrativo Empresarial </p>			
-		    <li>Administra todas las operaciones del ciclo de compra-venta de la empresa. </li>
+			<p>Sistema Facturación Electrónica </p>			
+		    <li>Permite a micro, pequeñas y medianas empresas, así como a personas físicas, obtener comprobantes fiscales en segundos. </li>
 		  </ul>
 		  </ul>
 		<a class="button" href="#">CONOCE MÁS</a>
