--- a/capacitacion.html
+++ b/capacitacion.html
@@ -4,11 +4,11 @@ layout : default
 <!-- first section  -->
 <div class="twelve columns" id="top_cur"> 
     <div id="text_mem">
-        <h4> Aprovecha al máximo tus sistemas </h4> 
+        <h4> Capacitate con nosotros </h4> 
         <br><br>
         <p>
          Contamos con una variedad de niveles para todos tus usuarios Aspel.
-         Así como cursos especializados para ayudar a crecer a la pequeña y mediana empresa.
+         Contamos también con  <span> cursos especializados </span> para ayudar a crecer a la pequeña y mediana empresa.
         </p>
     </div>
 </div>
@@ -49,72 +49,71 @@ layout : default
 
 <div class="twelve columns capacitaciones">
 <hr class="four columns">
-    <h5 id="h5_mem" class="four columns"> Capacitaciones </h5>
+    <h5 id="h5_mem" class="four columns"> Capacitaciones Aspel</h5>
   <hr class="four columns">
 </div>
 
 <div class="twelve columns">
-<table class="four columns">
-  <thead>
-    <tr>    
-      <td  class="t_head_cursos" colspan="1">BASICO</td>
-    </tr>
-  </thead>
- 
-  <tbody>
-    <td class="t_center"> 
-       <span class="inside">SAE </span>
-       <span class="inside">COI </span>
-       <span class="inside">NOI </span>
-       <span class="inside">PROD </span>
-       <span class="inside">CAJA </span>
-       <span class="inside">BANCOS </span>
-    </td>
-  </tbody>
-</table>
 
-
-<table class="four columns">
-  <thead>
-    <tr>    
-      <td id="in" class="t_head_cursos" colspan="1">intermedio</td>
-    </tr>
-  </thead>
-
-  <tbody>
-    <td class="t_center"> 
-       <span class="inside">SAE </span>
-       <span class="inside">COI </span>
-       <span class="inside">NOI </span>
-       <span class="inside">PROD </span>
-       <span class="inside">CAJA </span>
-       <span class="inside">BANCOS </span>
-    </td>
-  </tbody>
-</table>
-
-<table class="four columns">
-  <thead>
-    <tr>    
-      <td id="av" class="t_head_cursos" colspan="1">avanzado</td>
-    </tr>
-  </thead>
-
-  <tbody>
-    <td class="t_center"> 
-       <span class="inside">SAE </span>
-       <span class="inside">COI </span>
-       <span class="inside">NOI </span>
-       <span class="inside">PROD </span>
-       <span class="inside">CAJA </span>
-       <span class="inside">BANCOS </span>
-    </td>
-  </tbody>
-</table>
-
-
- 
+ <div class="twelve columns t_center">
+  <span class="sub"> Niveles Básico, Intermedio y Avanzado de todos los sistemas </span>
+         <br><br><br>
 </div>
+
+<div class="twelve columns">
+    <div class="two columns rect t_center b_sae white">SAE</div>
+    <div class="two columns rect t_center b_coi white">COI</div>
+    <div class="two columns rect t_center b_noi white">NOI</div>
+    <div class="two columns rect t_center b_caja white">CAJA</div>
+    <div class="two columns rect t_center b_prod white">PROD</div>
+    <div class="two columns rect t_center b_banco white">BANCOS</div>
+    <br><br><br>    <br><br><br>
+</div>
+
+<!-- COI CURSOS  -->
+
+</div>
+
+
+
+
+
+
+<!-- Cursos especializados  -->
+<div class="twelve columns capacitaciones">
+<hr class="four columns">
+    <h5 id="h5_mem" class="four columns"> Cursos Especializados </h5>
+  <hr class="four columns">
+</div>
+
+
+<div class="twelve columns sec listado">
+  <div class="three columns curso t_center">
+     Cierre COI 
+  </div>
+  <div class="three columns curso t_center">
+   Corte Anual NOI 
+  </div>
+  <div class="three columns curso t_center">
+    Diseño de Estados Financieros 
+  </div>
+   <div class="three columns curso t_center">
+    Cálculo de Finiquito 
+  </div>
+</div>
+<div class="twelve columns sec listado">
+     <div class="three columns space">
+    .
+  </div>
+     <div class="three columns curso t_center">
+    Cálculo de Finiquito 
+  </div>
+       <div class="three columns curso t_center">
+    Cálculo de Finiquito 
+  </div>
+</div>
+
+
 
 
 <div class="twelve columns calendar">
