--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@ layout: default
 
       <div class="four columns">  
         <article> 
-          <h5>CONOCE LOS SISTEMAS EN RENTA</h5>
+          <h5>CONOCE LOS SISTEMAS EN RENTA</xh5>
           <h6>Más ágil, más económico</h6>
           <br>
           <img src="images/aspel-SAE.png">
           <p>
-            Descubre la nueva app que administra las principales operaciones de compra-venta desde cualquier lugar, para que tu empresa sea más productiva y genere mayores ingresos.
+            Pregunta por la modalidad en renta de los sistemas Aspel y adqueirelos con nosotros. 
           </p>
+          <br>
         </article>
         <a class="button" href="#">MÁS INFORMACIÓN</a>
       </div>
@@ -41,12 +42,12 @@ layout: default
           <h5>CAPACITATE CON NOSOTROS</h5>
           <h6>CURSOS A TU MEDIDA</h6>
           <br>
-          <img src="images/aspel-NOI.png">
+          <img src="images/group.svg">
           <p>
-            Descubre la nueva app que administra las principales operaciones de compra-venta desde cualquier lugar, para que tu empresa sea más productiva y genere mayores ingresos.
+            Pregunta por nuestro calendario de capacitación o adquiere una membresía para tener acceso a capacitación ilimitadad Aspel . 
           </p>
         </article>
-        <a class="button" href="#">COTIZA CON NOSOTROS</a>
+        <a class="button" href="capacitacion.html">Quiero saber más </a>
       </div><!-- end of four columns -->
 </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
