--- a/membresias.html
+++ b/membresias.html
@@ -15,7 +15,6 @@ layout: default
 
 
 <!-- second section  -->
-<h5 id="title_img" class="twelve columns"> Diseñadas para ayudar a tu empresa</h5>
 
 
 <div class="twelve columns" id="images_mem">
@@ -93,7 +92,7 @@ layout: default
 <table class="four columns">
   <thead>
     <tr>    
-      <td id="white" class="t_head"colspan="1">SERVICIOS</td>
+      <td class="t_head servicios"colspan="1">SERVICIOS</td>
     </tr>
   </thead>
   <tbody>
