--- a/productos.html
+++ b/productos.html
@@ -74,7 +74,7 @@ layout: default
 		<img class="img_product" src="images/PROD.png">
 		<ul class="ul_product"> 
 		<br>
-			<p class="title_systems">Sistema de Control de Producción </p>			
+			<h7 class="title_systems">Sistema de Control de Producción </p>			
 		    <li> Permite la planeación y control de los procesos de fabricación de la empresa, mediante un eficiente seguimiento de la producción.</li>
 		  </ul>
 		<a class="button" href="#">CONOCE MÁS</a>
