--- a/noi.html
+++ b/noi.html
@@ -3,33 +3,32 @@ layout: default
 ---
 
 <!-- header -->
-
 <div class="twelve columns header">
 	<div class="six columns ">
-			
-			<div class="letters c_sae">SAE</div>
-			<br>
-			<h5 class="ten columns quote">
-			"Administra mi empresa 
-			y emite Facturas Electrónicas CFDI 
-			para entregar de inmediato"
-			</h5>
+		<div class="letters c_noi">NOI</div>
+		<br>
+		<h5 class="ten columns quote">
+			"Expide y entrega los 
+			recibos de nómina digitales
+			en menos de un segundo"
+		</h5>
 	</div>
 	<div class="six columns ">
-		<img width="500px" src="images/collage_sae.png">
+		<img class="collage" src="images/collage_noi.png">
 	</div>
 </div>
+
+<!-- line -->
 <hr class="twelve columns"> 
 
 
 <!-- content -->
 <div class="twelve columns">
-
 	<!-- content right -->
 	<div class="six columns">
 		<br><br>
 		<p> 
-			Controla el ciclo de todas las operaciones de compra-venta de la empresa, como inventarios, clientes, facturación, cuentas por cobrar, vendedores, compras, proveedores y cuentas por pagar, automatizando eficientemente los procesos administrativos. Ofrece movilidad a las empresas conectando las sucursales remotamente y por medio de dispositivos móviles; permite el acceso a la información comercial y administrativa, brindando una integración total. Poderosa interfaz con Aspel-COI para relacionar los folios fiscales de los Comprobantes Fiscales Digitales a las pólizas, de acuerdo con los requerimientos de la Contabilidad Electrónica.
+			Aspel-NOI automatiza el control de la nómina. Su fácil manejo y versatilidad ofrecen un cálculo exacto de las percepciones y deducciones de los trabajadores de acuerdo a las disposiciones fiscales y laborales vigentes. Genera Comprobantes Fiscales Digitales por Internet (CFDI) de los recibos de nómina y asimilables a salarios. Además, calcula la retención de ISR, cuotas obrero-patronales IMSS e INFONAVIT, subsidio para el empleo y previsión social, entre otros.
 		</p>
 		 <br><br>
 		 <a href="#" target="_blank">
@@ -47,12 +46,12 @@ layout: default
 		<!-- item  -->
 		<div class="full-width individual">
 			<div class="ind_icon">
-				<img class="ind_im" src="images/sae_1.png">
+				<img class="ind_im" src="images/noi_1.png">
 			</div>
 			<div class="ind_txt">
-				<h6>Control total de tu empresa</h6>
+				<h6>  Recibos de nómina CFDI </h6>
 				<p>
-					El ciclo de compra-venta está cubierto totalmente, desde el registro del producto hasta la Factura Electrónica, lista para ser entregada al cliente.
+					Genera Comprobantes Fiscales Digitales por Internet (CFDI) de los recibos de pago de nómina de los trabajadores.En un solo paso se timbran fiscalmente los recibos, asegurando así la deducción de la nómina.Envío de los Comprobantes Fiscales Digitales al correo electrónico de los trabajadores.
 				</p>
 			</div>
 		</div> <!-- item end  -->
@@ -60,7 +59,7 @@ layout: default
 		<!-- item  -->
 		<div class="full-width individual">
 			<div class="ind_icon">
-				<img class="ind_im" src="images/sae_2.png">
+				<img class="ind_im" src="images/noi_2.png">
 			</div>
 			<div class="ind_txt">
 				<h6>Contabilidad Electrónica más fácil</h6>
@@ -73,7 +72,7 @@ layout: default
 		<!-- item  -->
 		<div class="full-width individual">
 			<div class="ind_icon">
-				<img class="ind_im" src="images/sae_3.png">
+				<img class="ind_im" src="images/noi_3.png">
 			</div>
 			<div class="ind_txt">
 				<h6> Conoce mejor a tu cliente </h6>
@@ -86,7 +85,7 @@ layout: default
 		<!-- item  -->
 		<div class="full-width individual">
 			<div class="ind_icon">
-				<img class="ind_im" src="images/sae_4.png">
+				<img class="ind_im" src="images/noi_4.png">
 			</div>
 			<div class="ind_txt">
 				<h6> Administración como punto de venta </h6>
