--- a/noi.html
+++ b/noi.html
@@ -62,9 +62,9 @@ layout: default
 				<img class="ind_im" src="images/noi_2.png">
 			</div>
 			<div class="ind_txt">
-				<h6>Contabilidad Electrónica más fácil</h6>
+				<h6> Percepciones y deducciones </h6>
 				<p>
-					Cumple fácilmente los requisitos de la Contabilidad Electrónica, al realizar la interfaz con Aspel-COI, en las pólizas de ventas y compras, automáticamente se relacionan los folios fiscales de los CFDI. ¡Trabaja menos con las interfaces Aspel! 
+					La consulta de percepciones y deducciones es más poderosa, incluye gráfica de acumulados y diferentes tipos de vistas.
 				</p>
 			</div>
 		</div> <!-- item end  -->
@@ -75,9 +75,9 @@ layout: default
 				<img class="ind_im" src="images/noi_3.png">
 			</div>
 			<div class="ind_txt">
-				<h6> Conoce mejor a tu cliente </h6>
+				<h6> Nómina del trabajador </h6>
 				<p>
-					En una sola sección tendrás los saldos, pedidos pendientes, productos apartados, estados de cuenta, antigüedad de saldos, productos más vendidos, ventas mensuales y citas programadas, para un seguimiento sencillo. 
+					La administración de la nómina es más eficiente e integral con el potente panel Nómina del Trabajador.
 				</p>
 			</div>
 		</div> <!-- item end  -->
@@ -88,9 +88,35 @@ layout: default
 				<img class="ind_im" src="images/noi_4.png">
 			</div>
 			<div class="ind_txt">
-				<h6> Administración como punto de venta </h6>
+				<h6> Exacto cálculo de impuestos </h6>
 				<p>
-					Controla eficientemente un punto de venta, te proporciona el corte de caja y una novedosa opción para facturar las notas de venta desde un sitio web.  
+					Realiza un fácil, correcto y automatizado cálculo de los impuestos y aportaciones de seguridad social, tanto de los trabajadores, como de la empresa. 
+				</p>
+			</div>
+		</div> <!-- item end  -->
+
+		<!-- item  -->
+		<div class="full-width individual">
+			<div class="ind_icon">
+				<img class="ind_im" src="images/noi_5.png">
+			</div>
+			<div class="ind_txt">
+				<h6> Claridad en el pago por hora </h6>
+				<p>
+					Administra el pago por hora a los trabajadores calculando debidamente faltas, vacaciones, horas extras y aportaciones de seguridad social.
+				</p>
+			</div>
+		</div> <!-- item end  -->
+
+		<!-- item  -->
+		<div class="full-width individual">
+			<div class="ind_icon">
+				<img class="ind_im" src="images/noi_6.png">
+			</div>
+			<div class="ind_txt">
+				<h6> Movimientos afiliatorios al IMSS </h6>
+				<p>
+					Establece comunicación directa con el IMSS para el envío de movimientos afiliatorios en línea. 
 				</p>
 			</div>
 		</div> <!-- item end  -->
