--- a/capacitacion.html
+++ b/capacitacion.html
@@ -122,6 +122,4 @@ layout : default
   <hr class="four columns">
 </div>
 
-
-  <iframe src="https://calendar.google.com/calendar/embed?showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=2&amp;hl=es_419&amp;bgcolor=%23FFFFFF&amp;src=rb7gju4161rndjckruk956htm0%40group.calendar.google.com&amp;color=%23333333&amp;ctz=America%2FMexico_City">
-</iframe>
+<iframe src="https://calendar.google.com/calendar/embed?title=Capacitaciones%20Aspel%20&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;src=es.mexican%23holiday%40group.v.calendar.google.com&amp;color=%235A6986&amp;ctz=America%2FMexico_City" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
