--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@ layout: default
 <div class="twelve columns">
       <div class="four columns">  
         <article> 
-          <h5>TU EMPRESA DESDE LA NUBE</h5>
-          <h6>Descubre ADM </h6>
+          <h5> SAE y su Complemento INE</h5>
+          <h6>SAE incorpora la nueva versión a tus CFDI </h6>
           <br>
-          <img src="images/aspel-producto-adm.png">
+              <img src="images/aspel-SAE.png">
           <p>
-              La nueva app que administra las principales operaciones de compra-venta desde cualquier lugar, para que tu empresa sea más productiva y genere mayores ingresos. 
+             A partir del 1 de septiembre de 2016, es obligatorio usar la versión 1.1 del Complemento INE. Cumple ahora mismo con SAE 6.0.
           </p>
         </article>
-        <a class="button" href="#">QUIERO SABER MÁS</a>
+        <a class="button" href="sae.html">QUIERO SABER MÁS</a>
       </div>
 
       <div class="four columns">  
@@ -28,13 +28,13 @@ layout: default
           <h5>CONOCE LOS SISTEMAS EN RENTA</xh5>
           <h6>Más ágil, más económico</h6>
           <br>
-          <img src="images/aspel-SAE.png">
+          <img src="images/money.svg">
           <p>
             Pregunta por la modalidad en renta de los sistemas Aspel y adqueirelos con nosotros. 
           </p>
           <br>
         </article>
-        <a class="button" href="#">MÁS INFORMACIÓN</a>
+        <a class="button" href="productos.html">MÁS INFORMACIÓN</a>
       </div>
 
       <div class="four columns">  
@@ -42,7 +42,7 @@ layout: default
           <h5>CAPACITATE CON NOSOTROS</h5>
           <h6>CURSOS A TU MEDIDA</h6>
           <br>
-          <img src="images/group.svg">
+          <img src="images/group_2.svg">
           <p>
             Pregunta por nuestro calendario de capacitación o adquiere una membresía para tener acceso a capacitación ilimitadad Aspel . 
           </p>
