--- a/facture.html
+++ b/facture.html
@@ -32,13 +32,9 @@ layout: default
 			Genera Comprobantes Fiscales Digitales por Internet (CFDI) de forma segura y en segundos sin importar tu profesión o giro comercial, de acuerdo con las disposiciones fiscales vigentes. Captura fácilmente facturas, notas de crédito, recibos de honorarios, de arrendamiento y otros comprobantes de ingreso y egreso. También emite comprobantes con múltiples complementos de retención e información de pagos, así como complementos fiscales.
 		</p>
 		 <br><br>
-		 <a href="#" target="_blank">
-		 	<input class="u-full-width" type="submit" value="Descarga el Folleto">
+		 <a href="resources/presentacion-ejecutiva-facture-4.pdf" target="_blank">
+		 	<input class="u-full-width" type="submit" value="Descarga la Presentación ejecutiva">
 		 </a>
-		 <br><br>
-		 <a href="#" target="_blank">
-		 	<input class="u-full-width" type="submit" value="Presentación ejecutiva">
-		 
 	</div><!-- end content right  -->
 
 	<!-- content left  -->
