--- a/caja.html
+++ b/caja.html
@@ -32,13 +32,9 @@ layout: default
 			Aspel-CAJA 3.5 convierte un equipo de cómputo en un punto de venta capaz de operar con pantallas de torreta, lectores ópticos de código de barras, básculas, cajones de dinero, lectores de tarjetas bancarias e impresoras de tickets. Permite el manejo y control de las operaciones de un punto de venta, ya que el Sistema está listo para capturar notas de venta e imprimir tickets, realizar Comprobantes Fiscales Digitales por Internet (CFDI), devoluciones, cancelaciones y notas de crédito, garantizando una administración controlada y el cumplimiento de tus obligaciones de acuerdo con las disposiciones fiscales vigentes.
 		</p>
 		 <br><br>
-		 <a href="#" target="_blank">
-		 	<input class="u-full-width" type="submit" value="Descarga el Folleto">
+		 <a href="resources/presentacion-ejecutiva-aspel-caja.pdf" target="_blank">
+		 	<input class="u-full-width" type="submit" value="Descarga la Presentación ejecutiva">
 		 </a>
-		 <br><br>
-		 <a href="#" target="_blank">
-		 	<input class="u-full-width" type="submit" value="Presentación ejecutiva">
-		 
 	</div><!-- end content right  -->
 
 	<!-- content left  -->
