--- a/noi.html
+++ b/noi.html
@@ -31,12 +31,8 @@ layout: default
 			Aspel-NOI automatiza el control de la nómina. Su fácil manejo y versatilidad ofrecen un cálculo exacto de las percepciones y deducciones de los trabajadores de acuerdo a las disposiciones fiscales y laborales vigentes. Genera Comprobantes Fiscales Digitales por Internet (CFDI) de los recibos de nómina y asimilables a salarios. Además, calcula la retención de ISR, cuotas obrero-patronales IMSS e INFONAVIT, subsidio para el empleo y previsión social, entre otros.
 		</p>
 		 <br><br>
-		 <a href="#" target="_blank">
-		 	<input class="u-full-width" type="submit" value="Descarga el Folleto">
-		 </a>
-		 <br><br>
-		 <a href="#" target="_blank">
-		 	<input class="u-full-width" type="submit" value="Presentación ejecutiva">
+		 <a href="resources/presentacion-ejecutiva-noi-8.pdf" target="_blank">
+		 	<input class="u-full-width" type="submit" value="Descarga la Presentación ejecutiva">
 		  </a>
 	</div><!-- end content right  -->
 
